tests/machine/x/ocaml/json_builtin.ml
(* Generated by Mochi compiler v0.10.26 on 1970-01-01T00:00:00Z *)
type record1 = { mutable a : int; mutable b : int }

let m : record1 = { a = 1; b = 2 }

let () =
  json m;
